fix error row color in dark mode

--- a/modules/web/client/src/main/webapp/styles/prime.scss
+++ b/modules/web/client/src/main/webapp/styles/prime.scss
@@ -9,9 +9,8 @@
   --active-row-background: var(--orange-50);
   --disabled-row-background: var(--bluegray-50);
   --disabled-row-color: var(--bluegray-400);
-  --negative-row-background: var(--red-50); // fixme
-  --negative-row-color: var(--red-400); // fixme
-  --negative-row-boxshadow: var(--red-800); // fixme
+  --negative-row-background: var(--red-50);
+  --negative-row-color: var(--red-400);
   --muted-color: var(--gray-600);
 }
 
@@ -21,9 +20,8 @@
   --active-row-background: var(--orange-900);
   --disabled-row-background: var(--bluegray-800);
   --disabled-row-color: var(--bluegray-300);
-  --negative-row-background: var(--red-50); // fixme
-  --negative-row-color: var(--red-400); // fixme
-  --negative-row-boxshadow: var(--red-800); // fixme
+  --negative-row-background: var(--red-900);
+  --negative-row-color: var(--red-100);
   --muted-color: var(--gray-300);
 }
 
@@ -33,7 +31,7 @@
 body,
 body .p-component {
   margin: 0;
-  font-family: 'Lato' !important;
+  font-family: "Lato" !important;
   background-color: var(--surface-f);
   color: var(--text-color);
 }
